# quadrant_lite

./: .gitignore  Cargo.toml  README.md  build.rs  dev.mrquantumoff.mcmodpackmanager_lite.desktop  dev.mrquantumoff.mcmodpackmanager_lite.metainfo.xml  dev.mrquantumoff.quadrant_lite.desktop  setup.nsi
.github/workflows/: release.yml
src/: main.rs  vecmodel.rs
ui/: appwindow.slint
wix/: main.wxs
