[package]
authors = ["MrQuantumOFF (Demir Yerli) <me@mrquantumoff.dev>"]
build = "build.rs"
description = "An alternative to the normal Quadrant, but without things, that some people may not like."
edition = "2021"
name = "quadrant_lite"
version = "24.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "~5.0.1"
open = "5.1.3"
slint = { version = "1.6.0", features = [
    "backend-winit",
    "backend-qt",
    "renderer-winit-software",
    "renderer-winit-femtovg",
    "std",
    "compat-1-0",
], default-features = false }
tokio = { version = "1.37.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "~0.3.9", features = ["wincon"] }

[build-dependencies]
slint-build = "1.6.0"
[target.'cfg(windows)'.build-dependencies]
winres = "~0.1.12"
